# NovaGrad

./: .gitignore  LICENCE  README.md  pyproject.toml
ignition/: __init__.py  backend.py
ignition/activations/: __init__.py  base_activation.py  gelu.py  sigmoid.py  tanh.py
ignition/albumentations/: __init__.py  gaussianNoise.py  horizontalFlip.py
ignition/dataloaders/: dataloader.py
ignition/initializers/: __init__.py  xavior.py
ignition/layers/: __init__.py  base_layer.py  batchNormalization.py  conv.py  pooling.py  residualBlock.py
ignition/losses/: binaryCrossEntropy.py  meanSquaredError.py
ignition/models/: __init__.py
ignition/optimizers/: adam.py  rmsprop.py  sgd.py
ignition/trainers/: __init__.py  sequential_trainer.py
novagrad/: __init__.py
novagrad/activations/: leaky_relu.py  relu.py  softmax.py
novagrad/albumentations/: __init__.py  _basetransform.py  _gaussianNoise.py  _horizontalFlip.py  _randomBrightness.py  _randomContrast.py  myCompose.py  randomBrightness.py  randomContrast.py
novagrad/dataloaders/: __init__.py  _dataloader.py
novagrad/initializers/: __init__.py  he.py
novagrad/layers/: __init__.py  _affine.py  _base_layer.py  _batchNormalization.py  _conv.py  _dropout.py  _flatten.py  _pooling.py  _residualBlock.py  affine.py  conv.py  dropout.py  flatten.py
novagrad/losses/: __init__.py  _base_loss.py  _binaryCrossEntropy.py  _crossEntropyError.py  _meanSquaredError.py  crossEntropyError.py
novagrad/models/: __init__.py  sequential.py
novagrad/optimizers/: __init__.py  _adagrad.py  _adam.py  _base_optimizer.py  _sgd.py  (+7 more)
(+2 files in other folders)
