# 패키지 빌드에 필요한 것들
[build-system]
requires = ["setuptools>=61.0"] # 빌드 시작 전에 시스템에 먼저 설치되어 있어야 하는 것.
build-backend = "setuptools.build_meta" # 실제 소스코드 압축&패키징

[project]
name = "ignition"
version = "0.1.0"
description = "A custom hybrid Deep Learning Framework with JAX and MLX backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "numba>=0.60.0"
    # JAX나 MLX는 하드웨어(Mac vs Colab)마다 설치 방식이 다르므로 
    # pip 설치 시 충돌을 막기 위해 하드 종속성에서 빼두는 것이 엔지니어링 팁입니다.
]